test/scc/expr/semantic-errors/164.a
164.t:1:13: error: array of inappropriate type initialized from string constant